test/src/e2e_vm_tests/test_programs/should_fail/contract_calls_its_method/src/main.sw
contract;

abi ContractCallsItsOwnMethod {
    fn method1();
    fn method2();
}

impl ContractCallsItsOwnMethod for Contract {
    fn method1() {
    }
    fn method2() {
        Self::method1()
    }
}
